# wikidelve

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.worker  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-worker.txt  requirements.txt  ts-serve.json
app/: agent.py  agent_memory.py  agent_prompts.py  agent_tools.py  auto_discovery.py  browser.py  chat.py  config.py  db.py  db_dynamo.py  document_renderer.py  documents.py  embeddings.py  github_monitor.py  http_client.py  hybrid_search.py  ingest.py  internal_tools.py  kimi_bridge.py  knowledge_graph.py  llm.py  local_research.py  logging_config.py  main.py  mcp_server.py  media.py  metrics.py  palace.py  quality.py  research.py  s3_sync.py  scaffolds.py  search.py  sse.py  storage.py  topic_classifier.py  tracing.py  transcribe.py  vector_store.py  wiki.py  (+1 more)
app/sources/: __init__.py  arxiv.py  base.py  bluesky.py  crossref.py  hackernews.py  podcast.py  reddit.py  rss.py  serper.py  sitemap.py  stackexchange.py  tavily.py  wikipedia.py
kimi-bridge/: Dockerfile  package.json  server.js  tools.js
templates/: admin.html  api_docs.html  article.html  base.html  document_view.html  documents_browse.html  graph.html  index.html  missing_article.html  palace.html  research.html  research_view.html  scaffold_view.html  scaffolds_browse.html  search.html  source_review.html
tests/: conftest.py
tests/bench/: conftest.py  test_bench_db.py  test_bench_storage.py
tests/e2e/: conftest.py  test_api.py  test_chat_api.py  test_chat_edge_cases.py  (+4 more)
(+93 files in other folders)
